output recommend song lists (hard code here

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -76,6 +76,11 @@
       </div>
       {% endfor %}
       </div>
+      <section class="dreams">
+      <!--<ul id="new-releases" class="sp-container"> -->
+      <ul id="recommend2" class="sp-container">
+      </ul>
+      </section>
       <script src="/templates/utility.js"></script>
       <script src="/templates/client.js"></script>
       <script type="text/javascript"> 
