add emoji to slide recommend output

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -76,6 +76,7 @@
       </div>
       {% endfor %}
       </div>
+      <h2><i> Recommend Songs 🚀🚀🚀 (learn from your teste 🍔 )</i></h2>
       <section class="dreams">
       <!--<ul id="new-releases" class="sp-container"> -->
       <ul id="recommend2" class="sp-container">
